<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivBluetoothStatus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ic_bluetooth_status"
        android:src="@drawable/ic_bluetooth" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/connection_required"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/connection_required_instructions" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_border_round"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvPermissionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/nearby_devices_granted"
            app:drawableStartCompat="@drawable/ic_cross" />

        <TextView
            android:id="@+id/tvBluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:text="@string/bluetooth_enabled"
            app:drawableStartCompat="@drawable/ic_cross" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/continue_word"
        android:textColor="@color/etr_white"
        android:textSize="24sp"
        app:backgroundTint="@color/blue"
        app:strokeColor="@color/blue" />

</LinearLayout>